header alignment fix

--- a/style.css
+++ b/style.css
@@ -69,7 +69,13 @@ img {
     margin-right: 10px;
 }
 
-.header-top-profile-elements {
+.header-top-left-side {
+    display: flex;
+    flex: 1;
+    align-items: center;
+}
+
+.header-top-right-side {
     display: flex;
     flex: 1;
     align-items: center;
@@ -90,6 +96,7 @@ img {
     align-items: center;
     justify-content: space-between;
     margin-left: 30px;
+    margin-top: 10px;
 }
 
 .header-bottom-profile-elements {
